2005-02-19  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-atmarkit.el (shimbun-atmarkit-content-start): Remove.
	(shimbun-atmarkit-content-end): Ditto.
	(shimbun-atmarkit-coding-system): Change 'euc-japan' by print page
	(shimbun-atmarkit-print-page-url): New variable.
	(shimbun-atmarkit-group-path-alist): Add "news","fdb","farc" groups.
	(shimbun-article): New method.
	(shimbun-make-contents): Ditto.
	(shimbun-clear-contents): Ditto.

2005-02-19  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-rss.el (shimbun-get-headers): Headers are returned
	whether they have been acquired.

	* shimbun/nnshimbun.el (nnshimbun-generate-nov-database):
	If returned header has already been acquired, replace NOV by it.

2005-02-19  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-rss.el (shimbun-get-headers): Store description element
	into extra slot.

	* shimbun/nnshimbun.el (nnshimbun-insert-nov): Insert extra slot of
	shimbun header.
	(nnshimbun-parse-nov): Store extra data into extra slot.

2005-02-19  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-ibm-dev.el (shimbun-get-headers): Fix index list reverse operation.

2005-02-18  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/nnshimbun.el (nnshimbun-decode-group-name): New function.
	(nnshimbun-request-article, nnshimbun-request-group)
	(nnshimbun-request-scan, nnshimbun-close-group)
	(nnshimbun-retrieve-headers, nnshimbun-request-expire-articles)
	(nnshimbun-request-delete-group): Decode group name.
	(gnus-group-make-shimbun-group): The server name must be
	unibyte string; Encode group name to utf-8.

2005-02-17  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-impress.el (shimbun-impress-groups-alist): Add new
	groups:"enterprise" "dc" "k-tai" "bb" "forest".
	(shimbun-impress-get-headers-date): Rename from shimbun-get-headers.
	(shimbun-impress-get-headers-sequence): New function.
	(shimbun-get-headers): Redefine method; function calling branched by
	groups.