@@ -1,3 +1,11 @@
+2005-02-19  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
+
+	* shimbun/nnshimbun.el (nnshimbun-insert-nov): Encode extra field.
+	(nnshimbun-parse-nov): Decode extra field.
+
+	* shimbun/sb-yahoo-auctions.el (shimbun-get-headers): New overridden
+	method.
+
 2005-02-19  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>
 
 	* shimbun/sb-atmarkit.el (shimbun-atmarkit-content-start): Remove.
